--- a/AutoHotKey/.vscode/settings.json
+++ b/AutoHotKey/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "editor.trimAutoWhitespace": false
+    "editor.trimAutoWhitespace": false,
+    "[markdown]": {
+        "editor.tabSize": 4,
+        "editor.wrappingIndent": "same"
+    }
 }
